[package]
name = "coaptest"
version = "0.1.0"
authors = ["thecrether@gmail.com <denisimeri6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

openssl = { version = "0.10", features = ["vendored"] }
coap = { path = "../coap-rs"}
